alignment issue fixed

--- a/style.css
+++ b/style.css
@@ -259,10 +259,13 @@ header {
 footer {
   background-color: #151414;
   color: #fff;
+  margin-top: 130px;
+}
+
+.footer-section {
   display: flex;
   justify-content: space-between;
-  padding: 100px 375px;
-  margin-top: 130px;
+  margin-bottom: 70px;
 }
 
 .footer-left {
